<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <!-- Login Layout -->
    <View
        android:id="@+id/statusBarBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="Log into your account"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:layout_weight="600"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:hint="@string/login_username_field"
            android:visibility="visible" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="600"
            android:background="@color/grey"
            android:hint="@string/login_password_field"
            android:inputType="textPassword"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/hrColor"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="end"
            android:background="@color/brandColor"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="login"
            android:text="@string/login_submit_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>