<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Login Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Logged in tutor: "
                android:textColor="@color/brandColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Log into your account"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/error"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="@string/login_username_field"
                android:visibility="visible" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="@string/login_password_field"
                android:inputType="textPassword"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/hrColor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@color/brandColor"
                android:onClick="login"
                android:text="@string/login_submit_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Signup"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/error2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <EditText
                android:id="@+id/signup_firstName"
                android:layout_width="fill_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="First Name"
                android:visibility="visible" />


            <EditText
                android:id="@+id/signup_lastName"
                android:layout_width="fill_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="Last Name"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/hrColor" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="fill_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="Username"
                android:visibility="visible" />


            <EditText
                android:id="@+id/signup_email"
                android:layout_width="fill_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="Email address"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/hrColor" />


            <EditText
                android:id="@+id/signup_password"
                android:layout_width="fill_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="Password"
                android:visibility="visible" />


            <EditText
                android:id="@+id/signup_confirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="Confirm Password"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/hrColor" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@color/brandColor"
                android:onClick="signup"
                android:text="Signup"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/success2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/success"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Create an Availability"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20px"
                    android:layout_weight="1"
                    android:text="Date" />

                <TextView
                    android:id="@+id/newavail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="20px"
                    android:onClick="showDatePickerDialog"
                    android:text="01-07-2019" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20px"
                    android:layout_weight="1"
                    android:text="Start Time" />

                <TextView
                    android:id="@+id/starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="20px"
                    android:onClick="showTimePickerDialog"
                    android:text="8:00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20px"
                    android:layout_weight="1"
                    android:text="End Time" />

                <TextView
                    android:id="@+id/endtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="20px"
                    android:onClick="showTimePickerDialog"
                    android:text="8:30" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/hrColor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@color/brandColor"
                android:onClick="createAvailability"
                android:text="@string/create_avail"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/error3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/success3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/success"
                android:visibility="gone" />

            <TextView
                android:id="@+id/error4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Become a tutor for a course"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/coursesList"
                android:layout_width="match_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:prompt="@string/course_prompt" />

            <EditText
                android:id="@+id/specificCourse_hourlyRate"
                android:layout_width="match_parent"
                android:layout_height="25pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="600"
                android:background="@color/grey"
                android:hint="Hourly Rate (eg: 15.75)"
                android:inputType="numberDecimal"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/success4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/success"
                android:visibility="gone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@color/brandColor"
                android:onClick="createSpecificCourse"
                android:text="Apply"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/findreviews"
                android:layout_width="match_parent"
                android:layout_height="262dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="Get the reviews of a student"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/student_username"
                    android:layout_width="fill_parent"
                    android:layout_height="25pt"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0"
                    android:hint="Student username"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/brandColor"
                    android:onClick="getReviewsForAStudent"
                    android:text="Search"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/error5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/success5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/dummyLayout"
                android:layout_width="match_parent"
                android:layout_height="261dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dummyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>